--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <header id="main_header">
 	<div id="main_gnb_wrap">
 		<nav id="main_gnb">
-			<nav id="gnb">
-				<ul>
+			<nav id="gnb" class="clearfix">
+				<ul class="clearfix">
 					<li><a href="#">Login</a></li>
 					<li><a href="#">Join</a></li>
 					<li><a href="#">Contact us</a></li>
@@ -28,7 +28,7 @@
 	<div id="main_lnb_wrap">
 		<nav id="main_lnb">
 			<nav id="lnb">
-				<ul>
+				<ul class="clearfix">
 					<li><a href="#">회사소개</a></li>
 					<li><a href="#">제품소개</a></li>
 					<li><a href="#">사업영역</a></li>
@@ -40,5 +40,37 @@
 		</nav>
 	</div>
 </header>
+<div id="visual_wrap">
+	<div class="visual">
+		<img src="./images/bulb.png" alt="전구" class="img01">
+		<img src="./images/title.png" alt="타이틀" class="img02">
+	</div>
+</div>
+<div id="nav_wrap">
+	<div id="nav">
+		<ul class="clearfix">
+			<li>
+				<h3>사회공헌</h3>
+				<p>소외된 이웃과 함께합니다.</p>
+			</li>
+			<li>
+				<h3>윤리경영</h3>
+				<p>공정한 경쟁을 추구합니다.</p>
+			</li>
+			<li>
+				<h3>인재채용</h3>
+				<p>열정넘치는 인재를 모십니다.</p>
+			</li>
+			<li>
+				<h3>기업문화</h3>
+				<p>유자의 가치를 소개합니다.</p>
+			</li>
+			<li>
+				<h3>비전</h3>
+				<p>유자의 미래를 선도합니다.</p>
+			</li>
+		</ul>
+	</div>
+</div>
 </body>
 </html>
