--- a/index.html
+++ b/index.html
@@ -3,74 +3,191 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta charset="UTF-8">
-	<title>main</title>
+	<title>하이미디어</title>
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<header id="main_header">
-	<div id="main_gnb_wrap">
-		<nav id="main_gnb">
-			<nav id="gnb" class="clearfix">
-				<ul class="clearfix">
-					<li><a href="#">Login</a></li>
-					<li><a href="#">Join</a></li>
-					<li><a href="#">Contact us</a></li>
-					<li><a href="#">English</a></li>
+	<header id="main_header">
+		<div id="main_gnb_wrap">  <!-- 100% -->
+			<div id="main_gnb"> <!-- 980 -->
+				<nav id="gnb">
+					<ul>
+						<li><a href="#">Login</a></li>
+						<li><a href="#">Join</a></li>
+						<li><a href="#">Contact Us</a></li>
+						<li><a href="#">English</a></li>
+					</ul>
+					</nav>
+			</div>
+		</div>
+		<div id="logo_wrap">
+			<h1>하이미디어</h1>
+			<div class="toggle">
+				<a href="javascript:void(0)"><img src="./images/toggle_btm.jpg" alt="toggle button"></a>
+			</div>
+		</div>
+		<div id="main_lnb_wrap">
+			<div id="main_lnb">
+				<nav id="lnb">
+					<ul class="clearfix">
+						<li><a href="#">회사소개</a></li>
+						<li><a href="#">제품소개</a></li>
+						<li><a href="#">사업영역</a></li>
+						<li><a href="#">고객센터</a></li>
+						<li><a href="#">사회공헌</a></li>
+						<li><a href="#">인재채용</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+
+		
+	</header>
+	<div id="visual_wrap">
+		<div class="visual">
+			<img src="./images/visual_img01.png" alt="bulb" class="img01">
+			<img src="./images/visual_img02.png" alt="next energy" class="img02">
+		</div>
+	</div>
+	<section id="main_banner">
+		<div id="banner">
+			<ul class="clearfix">
+				<li>
+					<div class="card">
+						<img src="./images/icon01.png" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">사회공헌</h3>
+							<p class="card-text">이웃과 함께합니다.</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/icon02.png" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">사회공헌</h3>
+							<p class="card-text">이웃과 함께합니다.</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/icon03.png" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">사회공헌</h3>
+							<p class="card-text">이웃과 함께합니다.</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/icon04.png" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">사회공헌</h3>
+							<p class="card-text">이웃과 함께합니다.</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/icon05.png" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">사회공헌</h3>
+							<p class="card-text">이웃과 함께합니다.</p>
+						</div>
+					</div>	
+				</li>
+
+			</ul>
+		</div>
+	</section>
+	<section id="main_article">
+			<ul class="clearfix">
+				<li>
+					<div class="card">
+						<img src="./images/img01.jpg" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">회사개요</h3>
+							<p class="card-text">하이미디어는 태양열발전 등 그린<br>에너지와 바이오사업을 통해 신성장동력을 강화</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/img02.jpg" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">사업분야</h3>
+							<p class="card-text">하이미디어는 태양열발전 등 그린<br>에너지와 바이오사업을 통해 신성장동력을 강화</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/img03.jpg" alt="사회공헌">
+						<div class="card-body">
+							<h3 class="card-title">환경경영</h3>
+							<p class="card-text">하이미디어는 태양열발전 등 그린<br>에너지와 바이오사업을 통해 신성장동력을 강화</p>
+						</div>
+					</div>	
+				</li>
+			</ul>
+	</section>
+	<section id="bottom_article">
+			<ul class="clearfix">
+				<li>
+					<div class="card">
+						<img src="./images/imgbg01.jpg" alt="사회공헌" class="img">
+						<div class="card-body">
+							<h3 class="card-title">사보</h3>
+							<p class="card-text">풍부한 경험과 최고의<br>기술력으로 새울운 미래를<br>열어갑니다.</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/imgbg02.jpg" alt="사회공헌" class="img">
+						<div class="card-body">
+							<h3 class="card-title">사업분야</h3>
+							<p class="card-text">하이미디어는 태양열발전 등 그린<br>에너지와 바이오사업을 통해 신성장동력을 강화</p>
+						</div>
+					</div>	
+				</li>
+				<li>
+					<div class="card">
+						<img src="./images/imgbg03.jpg" alt="사회공헌"  class="img">
+						<div class="card-body">
+							<h3 class="card-title">환경경영</h3>
+							<p class="card-text">하이미디어는 태양열발전 등 그린<br>에너지와 바이오사업을 통해 신성장동력을 강화</p>
+						</div>
+					</div>	
+				</li>
+			</ul>
+	</section>
+	<footer id="main_footer">
+		<div id="main_footer_wrap">
+			<div id="footer_menu">
+				<ul>
+					<li><a href="#">개인정보 취급방침</a></li>
+					<li><a href="#">이메일주소 무단 수집 거부</a></li>
+					<li><a href="#">패밀리 사이트</a></li>
+					<div class="top">top</div>
 				</ul>
-			</nav>
-		</nav>
-	</div>
-	<div id="logo_wrap">
-		<h1>하이미디어</h1>
-		<div class="toggle"><img src="./images/toggle_btm.jpg" alt="toggle button"></div>
-	</div>
-	<div id="main_lnb_wrap">
-		<nav id="main_lnb">
-			<nav id="lnb">
-				<ul class="clearfix">
-					<li><a href="#">회사소개</a></li>
-					<li><a href="#">제품소개</a></li>
-					<li><a href="#">사업영역</a></li>
-					<li><a href="#">고객센터</a></li>
-					<li><a href="#">사회공헌</a></li>
-					<li><a href="#">인재채용</a></li>
-				</ul>
-			</nav>
-		</nav>
-	</div>
-</header>
-<div id="visual_wrap">
-	<div class="visual">
-		<img src="./images/bulb.png" alt="전구" class="img01">
-		<img src="./images/title.png" alt="타이틀" class="img02">
-	</div>
-</div>
-<div id="nav_wrap">
-	<div id="nav">
-		<ul class="clearfix">
-			<li>
-				<h3>사회공헌</h3>
-				<p>소외된 이웃과 함께합니다.</p>
-			</li>
-			<li>
-				<h3>윤리경영</h3>
-				<p>공정한 경쟁을 추구합니다.</p>
-			</li>
-			<li>
-				<h3>인재채용</h3>
-				<p>열정넘치는 인재를 모십니다.</p>
-			</li>
-			<li>
-				<h3>기업문화</h3>
-				<p>유자의 가치를 소개합니다.</p>
-			</li>
-			<li>
-				<h3>비전</h3>
-				<p>유자의 미래를 선도합니다.</p>
-			</li>
-		</ul>
-	</div>
-</div>
+			</div>
+			<div id="footer_wrap">
+				<div class="wrap">
+					<div class="logo">하이미디어</div>
+					<div class="info">
+						<ul>
+							<li>하이미디어</li>
+							<li>대표:홍길동   사업자등록번호:000-00-00000    주소:서울시 영등포구 여의도동 123455</li>
+							<li>TEL:02-0000-0000     FAX:02-0000-0000    E-mail:abcde@himedia.com</li>
+							<li>Copyright(c)2018.himedia. All right reserved</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
