--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>하이미디어</title>
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<script src="./js/jquery-3.3.1.min.js"></script>
+	<script src="./js/main.js"></script>
 </head>
 <body>
 	<header id="main_header">
@@ -31,12 +33,54 @@
 			<div id="main_lnb">
 				<nav id="lnb">
 					<ul class="clearfix">
-						<li><a href="#">회사소개</a></li>
-						<li><a href="#">제품소개</a></li>
-						<li><a href="#">사업영역</a></li>
-						<li><a href="#">고객센터</a></li>
-						<li><a href="#">사회공헌</a></li>
-						<li><a href="#">인재채용</a></li>
+						<li><a href="./sub/sub.html">회사소개</a>
+							<ul class="sub">
+								<li><a href="#">smenu01</a></li>
+								<li><a href="#">smenu02</a></li>
+								<li><a href="#">smenu03</a></li>
+								<li><a href="#">smenu04</a></li>
+							</ul>
+						</li>
+						<li><a href="#">제품소개</a>
+							<ul class="sub">
+								<li><a href="#">smenu01</a></li>
+								<li><a href="#">smenu02</a></li>
+								<li><a href="#">smenu03</a></li>
+								<li><a href="#">smenu04</a></li>
+							</ul>
+						</li>
+						<li><a href="#">사업영역</a>
+							<ul class="sub">
+								<li><a href="#">smenu01</a></li>
+								<li><a href="#">smenu02</a></li>
+								<li><a href="#">smenu03</a></li>
+								<li><a href="#">smenu04</a></li>
+							</ul>	
+						</li>
+						<li><a href="#">고객센터</a>
+							<ul class="sub">
+								<li><a href="#">smenu01</a></li>
+								<li><a href="#">smenu02</a></li>
+								<li><a href="#">smenu03</a></li>
+								<li><a href="#">smenu04</a></li>
+							</ul>
+						</li>
+						<li><a href="#">사회공헌</a>
+							<ul class="sub">
+								<li><a href="#">smenu01</a></li>
+								<li><a href="#">smenu02</a></li>
+								<li><a href="#">smenu03</a></li>
+								<li><a href="#">smenu04</a></li>
+							</ul>
+						</li>
+						<li><a href="#">인재채용</a>
+							<ul class="sub">
+								<li><a href="#">smenu01</a></li>
+								<li><a href="#">smenu02</a></li>
+								<li><a href="#">smenu03</a></li>
+								<li><a href="#">smenu04</a></li>
+							</ul>
+						</li>
 					</ul>
 				</nav>
 			</div>
