--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>하이미디어</title>
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/jquery.bxslider.css">
 	<script src="./js/jquery-3.3.1.min.js"></script>
+	<script src="./js/jquery.bxslider.js"></script>
 	<script src="./js/main.js"></script>
 </head>
 <body>
@@ -85,15 +87,27 @@
 				</nav>
 			</div>
 		</div>
-
-		
 	</header>
-	<div id="visual_wrap">
-		<div class="visual">
-			<img src="./images/visual_img01.png" alt="bulb" class="img01">
-			<img src="./images/visual_img02.png" alt="next energy" class="img02">
-		</div>
-	</div>
+	<ul class="slider_wrap">
+		<li id="visual_wrap">
+			<div class="visual">
+				<img src="./images/visual_img01.png" alt="bulb" class="img01">
+				<img src="./images/visual_img02.png" alt="next energy" class="img02">
+			</div>
+		</li>
+		<li id="visual_wrap">
+			<div class="visual">
+				<img src="./images/visual_img01.png" alt="bulb" class="img01">
+				<img src="./images/visual_img02.png" alt="next energy" class="img02">
+			</div>
+		</li>
+		<li id="visual_wrap">
+			<div class="visual">
+				<img src="./images/visual_img01.png" alt="bulb" class="img01">
+				<img src="./images/visual_img02.png" alt="next energy" class="img02">
+			</div>
+		</li>
+	</ul>
 	<section id="main_banner">
 		<div id="banner">
 			<ul class="clearfix">
